--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <main class="container">
-      <article class="card-1">
+      <section class="card-1">
         <h1 class="card-1__header-1">Join our community</h1>
 
         <h2 class="card-1__header-2">
@@ -36,7 +36,7 @@
           reviews. Perfect for any developers who are serious about honing their
           skills.
         </p>
-      </article>
+      </section>
 
       <section class="card-2">
         <h2 class="card-2__header">Monthly Subscription</h2>
