--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   <body>
     <main class="container">
       <section class="card-1">
-        <h1 class="card-1__header-1">Join our community</h1>
+        <h1 class="card-1__header">Join our community</h1>
 
-        <h2 class="card-1__header-2">
+        <p class="card-1__paragraph-1">
           30-day, hassle-free money back guarantee
-        </h2>
+        </p>
 
-        <p class="card-1__paragraph">
+        <p class="card-1__paragraph-2">
           Gain access to our full library of tutorials along with expert code
           reviews. Perfect for any developers who are serious about honing their
           skills.
@@ -49,7 +49,7 @@
           Full access for less than &dollar;1 a day
         </p>
 
-        <button class="button">Sign Up</button>
+        <a href="#" class="button">Sign Up</a>
       </section>
 
       <section class="card-3">
